Fix spacing of text area and submit button.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -65,7 +65,6 @@ footer {
 }
 
 textarea {
-  margin: 30px;
   padding: 10px;
   background-color: rgba(255, 255, 255, 0.5);
   font-size: 16px;
@@ -101,16 +100,15 @@ option {
 }
 
 input[type="submit"] {
-  padding: 8px;
+  /*padding: 8px;*/
   font-family: 'Karla', sans-serif;
-  font-size: 12px;
+  font-size: 13px;
   background: none;
   border: 2px solid white;
   border-color: #fff;
   color: #fff;
   transition: 0.3s all ease-in;
   margin-top: 20px;
-
 }
 
 input[type="submit"]:hover {
